Update to pages config.

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: What else is in an evolved name? Exploring evolvable specificity with SignalGP
+description: Genetic Programming Theory and Practice XVI Contribution
