--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: What else is in an evolved name? Exploring evolvable specificity with SignalGP
-description: Genetic Programming Theory and Practice XVI Contribution
+description: Genetic Programming Theory and Practice XVI Contribution by Alex Lalejini and Charles Ofria
